[project]
name = "epub-to-md"
version = "0.1.0"
description = "A fast and reliable Python tool that converts EPUB files into individual chapter-wise Markdown files. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ebooklib>=0.19",
    "markdownify>=1.1.0",
]
